# multi-robot-d-star-lite

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run_app.sh  run_dev.sh  run_tests.sh  setup.py  tox.ini
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: ControlPanel.module.css  ControlPanel.test.tsx  ControlPanel.tsx  GameLog.module.css  GameLog.test.tsx  GameLog.tsx  Grid2D.module.css  Grid2D.test.tsx  Grid2D.tsx
frontend/src/services/: WebSocketClient.test.ts  WebSocketClient.ts
frontend/src/store/: gameStore.test.ts  gameStore.ts
frontend/src/utils/: colors.ts  coordinates.ts
multi_robot_d_star_lite/: __init__.py  __main__.py  coordinator.py  dstar_lite.py  simple_visualizer.py  ui_components.py  visualizer.py  world.py
multi_robot_d_star_lite/core/: coordinator.py
multi_robot_d_star_lite/path_planners/: __init__.py
multi_robot_d_star_lite/pygame/: __init__.py  __main__.py  game_log.py  ui_components.py  visualizer.py
multi_robot_d_star_lite/utils/: __init__.py  colors.py  export_grid.py  parse_test_grid.py
multi_robot_d_star_lite/web/: __init__.py  __main__.py  game_manager.py  main.py
multi_robot_playground/: __init__.py
multi_robot_playground/core/: __init__.py  coordinator.py  world.py
multi_robot_playground/core/path_planners/: base_planner.py  dstar_lite_planner.py
multi_robot_playground/utils/: __init__.py  colors.py  export_grid.py  parse_test_grid.py
multi_robot_playground/web/: game_manager.py  main.py
tests/: requirements.txt  test_collision.py  test_collision_details.py  test_collision_state_management.py  test_color_generation.py  test_control_panel.py  test_export.py  test_game_log.py  test_goal_blocked_detection.py  test_goal_placement_rules.py  test_iterative_collision_system.py  test_mixed_robot_movement.py  test_obstacle_on_goal.py  test_obstacle_on_robot_validation.py  test_partial_pausing.py  test_pausing_behavior.py  test_placement_validation.py  test_robot_id_pool.py  test_robot_management.py  test_stuck_robot_detection.py  test_visualizer_with_log.py  test_world.py  test_world_resize.py
tests/fixtures/: test_cases.txt
tests/web/: test_game_manager.py  test_game_manager_stuck.py  test_websocket.py
